# kickstart.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SETUP.md  clippy.toml  configure.ps1  configure.sh  flake.nix  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
src/: lib.rs
